added cart icon and cart dropdown. Implemented cart reducer

--- a/src/components/Header/header.styles.scss
+++ b/src/components/Header/header.styles.scss
@@ -10,7 +10,11 @@
       width: 70px;
       padding: 25px;
     }
-  
+    .userName {
+      display: flex;
+      align-items: center;
+      margin: 0;
+    }
     .options {
       width: 50%;
       height: 100%;
