--- a/src/components/Collection-Item/collection-item.styles.scss
+++ b/src/components/Collection-Item/collection-item.styles.scss
@@ -1,10 +1,20 @@
 .collection-item {
-    width: 22%;
+    // width: 22%;
     display: flex;
     flex-direction: column;
     height: 350px;
     align-items: center;
+    position: relative;
   
+    &:hover {
+      .image {
+        opacity: 0.8;
+      }
+      .custom-button{
+        opacity: 0.85;
+        display: flex
+      }
+    }
     .image {
       width: 100%;
       height: 95%;
@@ -13,8 +23,16 @@
       margin-bottom: 5px;
     }
   
+    .custom-button {
+      width: 80%;
+      position: absolute;
+      top: 255px;
+      display: none;
+      opacity: 0.7;
+    }
+
     .collection-footer {
-      width: 100%;
+      width: 80%;
       height: 5%;
       display: flex;
       justify-content: space-between;
@@ -23,6 +41,7 @@
       .name {
         width: 90%;
         margin-bottom: 15px;
+        font-size: 0.9rem;
       }
   
       .price {
