--- a/src/components/Collection-Preview/collectionPreview.styles.scss
+++ b/src/components/Collection-Preview/collectionPreview.styles.scss
@@ -9,8 +9,9 @@
     }
   
     .preview {
-      display: flex;
-      justify-content: space-between;
+      display: grid;
+      grid-gap: 25px;
+      grid-template-columns: repeat(auto-fit, minmax(224px, 1fr));
     }
   }
   
